--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vue3-electron-ts-template",
+  "name": "gitmoji-desktop-app",
   "private": true,
   "version": "0.0.1",
   "author": "Your Name",
@@ -50,28 +50,28 @@
     }
   },
   "dependencies": {
-    "@nut-tree/nut-js": "3.1.2",
-    "vue": "3.4.15"
+    "@nut-tree/nut-js": "^4.0.0",
+    "vue": "3.4.19"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "1.7.2",
-    "@vitejs/plugin-vue": "5.0.3",
+    "@vitejs/plugin-vue": "5.0.4",
     "@vue/eslint-config-prettier": "9.0.0",
     "@vue/eslint-config-typescript": "12.0.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "10.4.17",
     "concurrently": "8.2.2",
-    "electron": "28.2.1",
-    "electron-builder": "24.9.1",
+    "electron": "^29.0.1",
+    "electron-builder": "24.12.0",
     "eslint": "8.56.0",
-    "eslint-plugin-vue": "9.21.1",
+    "eslint-plugin-vue": "9.22.0",
     "pinia": "2.1.7",
-    "postcss": "^8.4.33",
-    "prettier": "3.2.4",
+    "postcss": "8.4.35",
+    "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
-    "vite": "5.0.12",
-    "vue-router": "4.2.5",
+    "vite": "5.1.4",
+    "vue-router": "4.3.0",
     "vue-tsc": "1.8.27"
   }
 }
