--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     }
   },
   "dependencies": {
-    "@nut-tree/nut-js": "^4.0.0",
+    "@nut-tree/nut-js": "4.0.0",
     "vue": "3.4.19"
   },
   "devDependencies": {
@@ -60,7 +60,7 @@
     "@vue/eslint-config-typescript": "12.0.0",
     "autoprefixer": "10.4.17",
     "concurrently": "8.2.2",
-    "electron": "^29.0.1",
+    "electron": "29.0.1",
     "electron-builder": "24.12.0",
     "eslint": "8.56.0",
     "eslint-plugin-vue": "9.22.0",
