--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     }
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "0.1.2",
+    "@mdi/js": "7.4.47",
     "@nut-tree/nut-js": "4.0.0",
     "electron-updater": "6.1.8",
     "vue": "3.4.19"
